# soccer_event_tagger

./: .gitignore  .taurignore  Cargo.toml  README.md  USER_MANUAL.md  index.html  release.yml  tailwind.config.js
.github/workflows/: release.yml
src/: app.rs  components.rs  main.rs  pages.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: data.rs  file.rs  main.rs  stream.rs
src-tauri/src/db/: event_register.rs  logic.rs  match_register.rs  mod.rs  player_register.rs
src/app/: event_tagger.rs  filepicker.rs  menu.rs  pitch.rs  register_match_info.rs  shortcuts.rs  table_data.rs  team_sheet.rs  video.rs
src/components/: home_button.rs  menu.rs  mod.rs  pitch.rs  table_data.rs  team_sheet.rs  video.rs
src/pages/: data_dashoard.rs  event_tagger.rs  mod.rs  register_match_info.rs  shortcuts.rs  user_manual.rs
style/: output.scss
types/: Cargo.toml
types/src/: event.rs  lib.rs  match_info.rs  point.rs  tagged_event.rs
