[package]
name = "soccer_event_tagger-ui"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
types = { path = "./types" }
leptos = { version = "0.6", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1.7"
leptos_router = { version = "0.6.12", features = ["csr"] }

[workspace.dependencies]
csv = "1.3.0"
serde = { version = "1", features = ["derive"] }
thiserror = "1.0.61"
uuid = { version = "1.8.0", features = ["serde", "v7", "v4"] }

[workspace]
members = ["src-tauri", "types"]
