[package]
name = "soccer_event_tagger-ui"
version = "1.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
types = { path = "./types" }
leptos = { version = "0.6", features = ["csr"] }
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["CanvasRenderingContext2d"] }
console_error_panic_hook = "0.1.7"
leptos_router = { version = "0.6.12", features = ["csr"] }
serde_json.workspace = true
pulldown-cmark = { version = "0.11.0", features = ["html"], default-features = false }

[workspace.dependencies]
serde_json = "1.0.117"
thiserror = "1.0.61"
csv = "1.3.0"
serde = { version = "1", features = ["derive"] }
uuid = { version = "1.8.0", features = ["serde", "v7", "v4"] }

[workspace]
members = ["src-tauri", "types"]
