[package]
name = "soccer_event_tagger"
version = "0.0.0"
description = "Tag Soccer Events"
authors = ["Qoid Naufal"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "api-all"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rfd = "0.14.1"
env_logger = "0.11.3"
log = "0.4.21"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
